// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniProtKBEvidenceTag components should render ProtVista evidence tag 1`] = `
Array [
  TemplateResult {
    "processor": DefaultTemplateProcessor {},
    "strings": Array [
      "
        <span
          class=",
      "
          @click=",
      "
        >
          ",
      "
          ",
      "</span
        >
      ",
    ],
    "type": "html",
    "values": Array [
      "evidence-tag svg-colour-unreviewed",
      [Function],
      [Function],
      "Imported",
    ],
  },
]
`;

exports[`UniProtKBEvidenceTag components should render automatic  1`] = `
<DocumentFragment>
  <button
    aria-controls="2"
    aria-expanded="false"
    class="evidence-tag svg-colour-unreviewed"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <test-file-stub
      height="12"
      width="12"
    />
    <span
      class="evidence-tag__label"
      title=""
    >
      Imported
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="2"
  />
</DocumentFragment>
`;

exports[`UniProtKBEvidenceTag components should render automatic annotation 1`] = `
<DocumentFragment>
  <button
    aria-controls="0"
    aria-expanded="false"
    class="evidence-tag svg-colour-reviewed"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <test-file-stub
      height="12"
      width="12"
    />
    <span
      class="evidence-tag__label"
      title=""
    >
      1 automatic annotation
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="0"
  />
</DocumentFragment>
`;

exports[`UniProtKBEvidenceTag components should render publications count 1`] = `
<DocumentFragment>
  <button
    aria-controls="1"
    aria-expanded="false"
    class="evidence-tag svg-colour-reviewed"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <test-file-stub
      height="12"
      width="12"
    />
    <span
      class="evidence-tag__label"
      title=""
    >
      2 publications
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="1"
  />
</DocumentFragment>
`;
